--- a/app/src/main/res/layout/activity_sue.xml
+++ b/app/src/main/res/layout/activity_sue.xml
@@ -66,32 +66,10 @@
         </LinearLayout>
     </ScrollView>
 
-    <LinearLayout
-        android:id="@+id/dt_nologin"
+    <cn.luern0313.wristbilibili.widget.ExceptionHandlerView
+        android:id="@+id/sue_exception"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:background="?android:attr/colorBackground"
-        android:clickable="true"
-        android:clipToPadding="false"
-        android:focusable="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingTop="33dp"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="88dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/img_videonotfound" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="@string/main_tip_no_login2" />
-    </LinearLayout>
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:id="@+id/sue_loading"
@@ -99,11 +77,8 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:clickable="true"
-        android:clipToPadding="false"
         android:focusable="true"
         android:gravity="center"
-        android:paddingTop="33dp"
-        android:paddingBottom="20dp"
         android:visibility="gone">
 
         <ProgressBar
