--- a/app/src/main/res/layout/activity_dynamic_detail.xml
+++ b/app/src/main/res/layout/activity_dynamic_detail.xml
@@ -11,88 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <cn.luern0313.wristbilibili.widget.ExceptionHandlerView
+        android:id="@+id/dynamic_detail_exception"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:show_loading="true"/>
+
     <cn.luern0313.wristbilibili.widget.TitleView
         android:id="@+id/dynamic_detail_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:mode="viewpager"
         app:title="@string/dynamic_detail_title" />
-
-    <LinearLayout
-        android:id="@+id/dynamic_detail_loading"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/dynamic_detail_title"
-        android:background="?android:attr/colorBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingBottom="33dp">
-
-        <ImageView
-            android:id="@+id/dynamic_detail_loading_img"
-            android:layout_width="wrap_content"
-            android:layout_height="92dp"
-            android:padding="6dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/main_tip_loading"
-            android:textSize="13sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/dynamic_detail_noweb"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/dynamic_detail_title"
-        android:background="?android:attr/colorBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingBottom="33dp"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="92dp"
-            android:padding="6dp"
-            android:src="@drawable/img_no_web" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/main_tip_no_web"
-            android:textSize="13sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/dynamic_detail_nothing"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/dynamic_detail_title"
-        android:background="?android:attr/colorBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingBottom="33dp"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="92dp"
-            android:padding="6dp"
-            android:src="@drawable/img_no_web" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/main_tip_no_data"
-            android:textSize="13sp" />
-    </LinearLayout>
-
 </RelativeLayout>
