--- a/app/src/main/res/layout/activity_favor_video.xml
+++ b/app/src/main/res/layout/activity_favor_video.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:ignore="ContentDescription">
 
+    <cn.luern0313.wristbilibili.widget.ExceptionHandlerView
+        android:id="@+id/favor_video_exception"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
         android:id="@+id/favor_video_swipe"
         android:layout_width="match_parent"
@@ -18,6 +23,7 @@
             android:clipToPadding="false"
             android:divider="@null"
             android:paddingTop="@dimen/titleHeight" />
+
     </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
 
     <cn.luern0313.wristbilibili.widget.TitleView
@@ -26,52 +32,4 @@
         android:layout_height="wrap_content"
         app:mode="back"
         app:title="@string/favor_video_title" />
-
-    <LinearLayout
-        android:id="@+id/favor_video_noweb"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?android:attr/colorBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="92dp"
-            android:padding="6dp"
-            android:src="@drawable/img_no_web" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/main_tip_no_web"
-            android:textSize="13sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/favor_video_nonthing"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?android:attr/colorBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="94dp"
-            android:padding="6dp"
-            android:src="@drawable/img_no_data" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/main_tip_no_data" />
-
-    </LinearLayout>
 </RelativeLayout>
