--- a/app/src/main/res/layout/fragment_favor_article.xml
+++ b/app/src/main/res/layout/fragment_favor_article.xml
@@ -1,57 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:ignore="RtlSymmetry,SmallSp,ContentDescription">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/favor_article_no_web"
+    <cn.luern0313.wristbilibili.widget.ExceptionHandlerView
+        android:id="@+id/favor_article_exception"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/activityBG"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="92dp"
-            android:padding="6dp"
-            android:src="@drawable/img_noweb" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/main_tip_no_web"
-            android:textSize="13sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/favor_article_no_data"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="94dp"
-            android:padding="6dp"
-            android:src="@drawable/img_nodata" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/main_tip_no_data" />
-
-    </LinearLayout>
+        app:wave_swipe_refresh_view="@id/favor_article_swipe" />
 
     <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
         android:id="@+id/favor_article_swipe"
@@ -66,6 +23,7 @@
             android:divider="@color/alpha"
             android:dividerHeight="1dp"
             android:paddingTop="@dimen/titleHeight" />
+
     </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
 
 </RelativeLayout>
