--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -1,32 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:ignore="UseCompoundDrawables,ContentDescription">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/rk_noweb"
+    <cn.luern0313.wristbilibili.widget.ExceptionHandlerView
+        android:id="@+id/rk_exception"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="92dp"
-            android:padding="6dp"
-            android:src="@drawable/img_noweb" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="好像没有网络...\n检查一下网络连接？"
-            android:textSize="13sp" />
-    </LinearLayout>
+        app:wave_swipe_refresh_view="@id/rk_swipe" />
 
     <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
         android:id="@+id/rk_swipe"
@@ -41,6 +23,7 @@
             android:divider="@null"
             android:dividerHeight="0dp"
             android:paddingTop="@dimen/titleHeight" />
+
     </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
 
 </RelativeLayout>
