--- a/app/src/main/res/layout/fragment_video_detail.xml
+++ b/app/src/main/res/layout/fragment_video_detail.xml
@@ -581,8 +581,9 @@
                     android:layout_toEndOf="@id/vd_season_img"
                     android:ellipsize="end"
                     android:maxLines="3"
-                    android:textColor="?android:attr/textColorHint"
-                    android:textSize="13sp" />
+                    android:textSize="13sp"
+                    android:textColor="?attr/colorTitle"
+                    tools:text="舌尖上的中国"/>
 
                 <TextView
                     android:id="@+id/vd_season_detail"
@@ -595,7 +596,6 @@
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:textSize="12sp" />
-
 
             </RelativeLayout>
 
@@ -681,33 +681,12 @@
                         android:textSize="11sp"
                         tools:text="粉丝：12.5万" />
                 </LinearLayout>
-
             </RelativeLayout>
         </LinearLayout>
-
     </ScrollView>
 
-    <LinearLayout
-        android:id="@+id/vd_vd_loading"
+    <cn.luern0313.wristbilibili.widget.ExceptionHandlerView
+        android:id="@+id/vd_exception"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/tipBG"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ProgressBar
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="4dp"
-            android:text="  加载中..."
-            android:textColor="@color/white" />
-    </LinearLayout>
+        android:layout_height="match_parent" />
 </RelativeLayout>
